# pytest-speed

./: Makefile  README.md  pyproject.toml
pytest_speed/: __init__.py  benchmark.py  cli.py  main.py  save.py  utils.py
tests/: requirements-linting.txt  requirements.txt
