[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'pytest-speed'
version = '0.3.2'
description = 'Modern benchmarking library for python with pytest integration.'
authors = [{name = 'Samuel Colvin', email = 's@muelcolvin.com'}]
readme = 'README.md'
license = {text = 'MIT'}
classifiers = [
    'Development Status :: 3 - Alpha',
    'Framework :: Pytest',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Science/Research',
    'Intended Audience :: System Administrators',
    'Operating System :: Unix',
    'Operating System :: POSIX :: Linux',
    'Environment :: Console',
    'Environment :: MacOS X',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Internet',
    'Typing :: Typed',
]
requires-python = '>=3.7'
dependencies = [
    'pytest>=7',
    'click>=7',
    'rich>=12',
]
[project.entry-points.pytest11]
speed = 'pytest_speed'

[project.scripts]
pytest-speed = "pytest_speed.cli:cli"

[project.urls]
repository = 'https://github.com/samuelcolvin/pytest-speed'

[tool.pytest.ini_options]
testpaths = 'tests'
filterwarnings = 'error'

[tool.coverage.run]
source = ['pytest_speed']
branch = true

[tool.coverage.report]
precision = 2
exclude_lines = [
    'pragma: no cover',
    'raise NotImplementedError',
    'raise NotImplemented',
    'if TYPE_CHECKING:',
    '@overload',
]

[tool.black]
color = true
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310']
skip-string-normalization = true
skip-magic-trailing-comma = true

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
color_output = true

[tool.mypy]
strict = true
warn_return_any = false
show_error_codes = true
